# chattr

./: .editorconfig  .gitignore  .md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: deploy.yml
client/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
client/src/: App.svelte  app.html  firebase.ts
client/src/components/: VideoPlayer.svelte
client/src/lib/: AiChat.svelte  AskAi.svelte  Chat.svelte  ControlBar.svelte  Lobby.svelte  Minutes.svelte  People.svelte  RemoteOverlay.svelte  RoomClient.ts  RoomShell.svelte  RoomTopBar.svelte  Scratchpad.svelte  Sidebar.svelte  StatusCard.svelte  Tile.svelte  WaitingScreen.svelte  ai-controller.test.ts  ai-controller.ts  ai.ts  audio-unlock.ts  chat-controller.test.ts  chat-controller.ts  chat-crypto.ts  denoise.ts  index.ts  markdown.ts  media-errors.test.ts  (+9 more)
deploy/: Caddyfile
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: input.rs  lib.rs  main.rs
server/: .dockerignore  .env.example  .eslintignore  .eslintrc.cjs  .prettierignore  Dockerfile  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
server/src/: config.ts  db.ts  index.ts  logger.ts  mediasoup.ts  rate-limit.ts  rooms.test.ts  rooms.ts  types.ts  validate.ts
(+23 files in other folders)
